--- a/Adventure/Views/Admin/Admin_Layout.cshtml
+++ b/Adventure/Views/Admin/Admin_Layout.cshtml
@@ -1,7 +1,4 @@
 ﻿
-@{
-    ViewBag.Title = "Admin_Layout";
-}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -12,9 +9,14 @@
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <meta name="description" content="Responsive Admin Template" />
     <meta name="author" content="SmartUniversity" />
-    <title>后台管理</title>
+    <!--new-->
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <title>Adventure-@ViewBag.title</title>
     <!-- google font -->
-    <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Abril+Fatface" rel="stylesheet">
+
     <!-- icons -->
     <link href="~/plugins/simple-line-icons/simple-line-icons.min.css" rel="stylesheet" type="text/css" />
     <link href="~/plugins/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
@@ -42,35 +44,218 @@
     <!-- favicon -->
     <link rel="shortcut icon" href="~/images/img/favicon.ico" />
 </head>
+
 <!-- END HEAD -->
 <body class="page-header-fixed sidemenu-closed-hidelogo page-content-white page-md header-white dark-sidebar-color logo-dark">
     <div class="page-wrapper">
         <!-- start header -->
+
         <div class="page-header navbar navbar-fixed-top">
             <div class="page-header-inner ">
-                <!-- logo start -->
-                <div class="page-logo">
-                    <a href="index.html">
-                        <img alt="" src="~/images/img/logo.png"><!--TODO:ICON-->
-                        <span class="logo-default">后台管理</span>
-                    </a>
-                </div>
-                <!-- logo end -->
-                <ul class="nav navbar-nav navbar-left in">
-                    <li><a href="#" class="menu-toggler sidebar-toggler"><i class="icon-menu"></i></a></li>
-                </ul>
+                <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
+                    <div class="container">
+                        @Html.ActionLink("Adventure", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="oi oi-menu"></span> Menu
+                        </button>
 
-                <!-- start mobile menu -->
-                <a href="javascript:;" class="menu-toggler responsive-toggler" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span></span>
-                </a>
-                <!-- end mobile menu -->
+                        <div class="collapse navbar-collapse" id="ftco-nav">
+                            <ul class="navbar-nav ml-auto">
+                                <li class="nav-item">
+                                    @Html.ActionLink("主页", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                                </li>
+                                <li class="nav-item">
+                                    @Html.ActionLink("关于我们", "About", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                                </li>
+                                <li class="nav-item">
+                                    @Html.ActionLink("体验活动", "Index", "Activity", new { area = "" }, new { @class = "navbar-brand" })
+                                </li>
+                                <li class="nav-item">
+                                    @Html.ActionLink("民宿", "Index", "Homestay", new { area = "" }, new { @class = "navbar-brand" })
+                                </li>
+                                <li class="nav-item">
+                                    @Html.ActionLink("旅行故事", "Index", "Blog", new { area = "" }, new { @class = "navbar-brand" })
+                                </li>
+                                <li class="nav-item">
+                                    @Html.ActionLink("联系我们", "Contact", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                                </li>
+                                @if (Session["user_id"] == null)
+                                {
+                                    <li>
+                                        @Html.ActionLink("登陆/注册", "Index", "Login", new { area = "" }, new { @class = "navbar-brand" })
+                                    </li>
+                                }
+                                else
+                                {
+                                    <li>
+                                        @Html.ActionLink("心愿单", "Favourites", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                                    </li>
+
+                                }
+                            </ul>
+                        </div>
+                    </div>
+                </nav>
+
             </div>
         </div>
         <!-- end header -->
         <!-- start page container -->
-        <div class="page-container">
+        <div class="page-container" style="margin-top:70px">
+            <!-- start sidebar menu -->
+            <div class="sidebar-container">
+                <div class="sidemenu-container navbar-collapse collapse fixed-menu">
+                    <div id="remove-scroll">
+                        <ul class="sidemenu page-header-fixed p-t-20" data-keep-expanded="false" data-auto-scroll="true" data-slide-speed="200">
+                            <li class="sidebar-toggler-wrapper hide">
+                                <div class="sidebar-toggler">
+                                    <span></span>
+                                </div>
+                            </li>
+                            <li class="sidebar-user-panel">
+                                <div class="user-panel">
+                                    <div class="row">
+                                        <div class="sidebar-userpic">
+                                            <img src="@Session["head_icon"]" class="img-responsive" alt=""><!--icon placeholder-->
+                                        </div>
+                                    </div>
+                                    <div class="profile-usertitle">
+                                        <div class="sidebar-userpic-name" style="margin-top:20px">
+                                            @Session["first_name"] @Session["last_name"]
+                                        </div>
+                                    </div>
+                                    <div class="sidebar-userpic-btn">
+                                        <a class="tooltips" href="~/Login" data-placement="top" data-original-title="注销登陆">
+                                            <i class="material-icons">input</i>
+                                        </a>
+                                    </div>
+                                </div>
+                            </li>
+
+                            <li class="nav-item">
+                                <a href="#" class="nav-link nav-toggle">
+                                    <i class="material-icons">business_center</i>
+                                    <span class="title">民宿订单</span>
+                                    <span class="arrow"></span>
+                                </a>
+                                <ul class="sub-menu">
+                                    <li class="nav-item">
+                                        <a href="~/Admin/checkMyHOrder" class="nav-link ">
+                                            <span class="title">查看订单</span>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </li>
+
+                            <li class="nav-item">
+                                <a href="#" class="nav-link nav-toggle">
+                                    <i class="material-icons">flight_takeoff</i>
+                                    <span class="title">体验订单</span>
+                                    <span class="arrow"></span>
+                                </a>
+                                <ul class="sub-menu">
+                                    <li class="nav-item">
+                                        <a href="~/Admin/checkMyAOrder" class="nav-link ">
+                                            <span class="title">查看订单</span>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </li>
+
+                            <li class="nav-item">
+                                <a href="#" class="nav-link nav-toggle">
+                                    <i class="material-icons">vpn_key</i>
+                                    <span class="title">房源</span>
+                                    <span class="arrow"></span>
+                                </a>
+                                <ul class="sub-menu">
+                                    <li class="nav-item">
+                                        <a href="~/HomeStay/Release" class="nav-link ">
+                                            <!--TODO-->
+                                            <span class="title">发布房源</span>
+                                        </a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="/Admin/ViewHomestay" class="nav-link ">
+                                            <span class="title">查看房源</span>
+                                        </a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="~/Admin/ViewHomestaySpecial" class="nav-link ">
+                                            <span class="title">查看房源实例</span>
+                                        </a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="~/Admin/checkMyHomestayOrder" class="nav-link ">
+                                            <span class="title">被预订的房源</span>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </li>
+
+                            <li class="nav-item">
+                                <a href="#" class="nav-link nav-toggle">
+                                    <i class="material-icons">map</i>
+                                    <span class="title">体验</span>
+                                    <span class="arrow"></span>
+                                </a>
+                                <ul class="sub-menu">
+                                    <li class="nav-item">
+                                        <a href="/Activity/Publish" class="nav-link ">
+                                            <span class="title">发布体验</span>
+                                        </a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="/Admin/ViewActivity" class="nav-link ">
+                                            <span class="title">查看体验</span>
+                                        </a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="/Admin/ViewActivityInstance" class="nav-link ">
+                                            <span class="title">查看体验实例</span>
+                                        </a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="/Admin/checkMyActivityOrder" class="nav-link ">
+                                            <span class="title">被预订的体验</span>
+                                            <span class="selected"></span>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li class="nav-item">
+                                <a href="#" class="nav-link nav-toggle">
+                                    <i class="material-icons">library_books</i>
+                                    <span class="title">故事</span>
+                                    <span class="arrow"></span>
+                                </a>
+                                <ul class="sub-menu">
+                                    <li class="nav-item">
+                                        <a href="/Blog/NewBlog" class="nav-link ">
+                                            <span class="title">发布故事</span>
+                                        </a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="/Admin/ViewBlog" class="nav-link ">
+                                            <span class="title">查看故事</span>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li class="nav-item">
+                                <a href="~/PersonInfo" class="nav-link nav-toggle">
+                                    <i class="material-icons">account_circle</i>
+                                    <span class="title">查看我的个人信息</span>
+                                </a>
+                            </li>
+
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <!-- end sidebar menu -->
             @RenderBody()
+
         </div>
         <!-- end page container -->
         <!-- start footer -->
@@ -166,7 +351,7 @@
         </div>
         <!-- end footer -->
     </div>
-    
+
     <!-- start js include path -->
     <script src="~/plugins/jquery/jquery.min.js"></script>
     <script src="~/plugins/popper/popper.min.js"></script>
