--- a/Adventure/Views/Admin/checkMyActivityOrder.cshtml
+++ b/Adventure/Views/Admin/checkMyActivityOrder.cshtml
@@ -1,40 +1,9 @@
 ﻿
 @{
-    ViewBag.Title = "我发布的体验活动";
+    ViewBag.Title = "查看被预定的体验活动";
     Layout = "~/Views/Admin/Admin_Layout.cshtml";
 }
 
-<script>
-    function deleteActivity(productID) {
-        $.ajax({
-            type: "post",
-            url: "../Admin/RemoveActivity",
-            data: {
-                productID: productID
-            },
-            async: false,
-            dataType: 'json',
-            success: function (d) {
-                var addState = d.isSuccess;
-                if (addState == true) {//登录成功
-                    console.log(d);
-                    window.location.href = "../Admin/ViewActivity";
-                    alert("删除成功!");
-                }
-                else {
-                    //登录失败
-                    console.log(d);
-                    alert(d.message);
-                    window.location.href = "../Admin/ViewActivity";
-                }
-            },
-            error: function (a) {
-                console.log(a);
-                alert("删除失败!");
-            }
-        });
-    }
-</script>
 <!-- start page content -->
 <div class="page-content-wrapper">
     <div class="page-content">
@@ -70,36 +39,39 @@
                             <table class="table table-hover table-checkable order-column full-width" id="example4">
                                 <thead>
                                     <tr>
-                                        <th class="center"> 活动名称 </th>
-                                        <th class="center"> 活动ID </th>
-                                        <th class="center"> 发起人 </th>
-                                        <th class="center"> 活动地点 </th>
-                                        <th class="center"> 注意事项 </th>
-                                        <th class="center"> 人数限制 </th>
-                                        <th class="center"> 操作 </th>
+                                        <th class="center">订单ID</th>
+                                        <th class="center">顾客ID</th>
+                                        <th class="center">建立时间</th>
+                                        <th class="center">开始时间</th>
+                                        <th class="center">结束时间</th>
+                                        <th class="center">总价</th>
+                                        <th class="center">平台费</th>
+                                        <th class="center">操作</th>
+
                                     </tr>
                                 </thead>
                                 <tbody>
                                     @{
-                                        if (ViewBag.activityList != null)
+                                        if (ViewBag.returnList != null)
                                         {
-                                            for (int i = 0; i < ViewBag.activityList.Length; i++)
+                                            for (int i = 0; i < ViewBag.returnList.Length; i++)
                                             {
                                                 <tr class="odd gradeX">
-                                                    <td class="center">@ViewBag.activityList[i].activity_name</td>
-                                                    <td class="center">@ViewBag.activityList[i].activity_id</td>
-                                                    <td class="center">@ViewBag.activityList[i].user_id</td>
-                                                    <td class="center">@ViewBag.activityList[i].activity_id</td>
-                                                    <td class="center">@ViewBag.activityList[i].note</td>
-                                                    <td class="center">@ViewBag.activityList[i].max_member_limit</td>
+                                                    <td class="center">@ViewBag.returnList[i].activity_order_id</td>
+                                                    <td class="center">@ViewBag.returnList[i].customer_id</td>
+                                                    <td class="center">@ViewBag.returnList[i].create_time.ToString("yyyy-MM-dd")</td>
+                                                    <td class="center">@ViewBag.returnList[i].start_time.ToString("yyyy-MM-dd")</td>
+                                                    <td class="center">@ViewBag.returnList[i].end_time.ToString("yyyy-MM-dd")</td>
+                                                    <td class="center">@ViewBag.returnList[i].total_price</td>
+                                                    <td class="center">@ViewBag.returnList[i].platform_fee</td>
                                                     <td class="center">
-                                                        <a href="/Activity/SingleActivity?productID=@ViewBag.activityList[i].activity_id" class="btn btn-tbl-edit btn-xs">
+                                                        <a href="/Activity/SingleActivity?productID=@ViewBag.returnList[i].activity_id" class="btn btn-tbl-edit btn-xs">
                                                             <i class="fa fa-exclamation-circle"></i>
                                                         </a>
-                                                        <a href="/Activity/EditActivity?productID=@ViewBag.activityList[i].activity_id" class="btn btn-tbl-edit btn-xs">
+                                                        <a href="/Admin/EditActivityOrder" class="btn btn-tbl-edit btn-xs">
                                                             <i class="fa fa-pencil"></i>
                                                         </a>
-                                                        <a href="#" class="btn btn-tbl-delete btn-xs" onclick="deleteActivity(@ViewBag.activityList[i].activity_id)">
+                                                        <a href="#" class="btn btn-tbl-delete btn-xs" onclick="">
                                                             <i class="fa fa-trash-o "></i>
                                                         </a>
                                                     </td>
