--- a/Adventure/Views/HomeStay/Special.cshtml
+++ b/Adventure/Views/HomeStay/Special.cshtml
@@ -1,11 +1,31 @@
 ﻿@{
-    ViewBag.Title = "发布体验活动";
+    ViewBag.Title = "发布特殊价格";
 }
 
-<link rel="stylesheet" href="~/Content/paper-bootstrap-wizard.css" />
+<link rel="stylesheet" href="~/Content/Activity/paper-bootstrap-wizard.css" />
 
 <script>
+    $(document).ready(function () {
 
+
+        var flag = "@ViewBag.flag";
+        var errorMessage = "@ViewBag.errorMessage";
+        if (flag == "1") {
+            alert(errorMessage);
+                @{ ViewBag.flag = null;}
+            window.location.href = "../HomeStay/Stayinfo?productID=@ViewBag.productID";
+        } else {
+            if (flag != "") {
+                      @{ ViewBag.flag = null; }
+                alert(errorMessage);
+            }
+        }
+        var message="@Session["message"]";
+        if (message!= "") {
+            alert(message);
+            @{Session["message"] = null;}
+        }
+    })
 </script>
 
 <style type="text/css">
@@ -15,7 +35,7 @@
     }
 </style>
 
-<div class="image-container set-full-height" style="background-image: url('../../images/bg_1.jpg');">
+<div class="image-container set-full-height" style="background-image: url('../images/Release_bg1.jpg');">
 
     <!-- Big container -->
     <div class="container">
@@ -23,38 +43,51 @@
             <div class="col-sm-8 col-sm-offset-2">
                 <!-- Wizard container -->
                 <div class="wizard-container">
-                    <div class="card wizard-card2" style="align-self:center" id="wizard">
+                    <div class="card wizard-card" id="wizard">
+
                         <div class="wizard-header">
                             <h3 class="wizard-title">发布特殊价格</h3>
                             <hr />
                         </div>
-                        <form action="#" method="post">
+
+                        <form id="add-instance" action="AddSpecial" method="post">
                             <!-- 创建价格实例 -->
                             <div>
                                 <div class="row">
                                     <div class="col-sm-5 col-sm-offset-1" style="margin-left:auto; margin-right:auto;">
                                         <div class="form-group">
+                                            <label id="product_label">产品ID:</label>
+                                            <input type="text" id="submitProduct" class="form-control" name="productID" hidden>
+                                            <br><label id="product_name">产品名称:</label>
+                                        </div>
+                                    </div>
+                                    <div class="col-sm-5 col-sm-offset-1" style="margin-left:auto; margin-right:auto;">
+                                        <label>特殊价格</label>
+                                        <div class="input-group">
+                                            <input type="number" class="form-control" name="form-price" required="required"
+                                                   onkeyup="if (this.value.length == 1) { this.value = this.value.replace(/[^1-9]/g, '') }else { this.value = this.value.replace(/\D/g, '') }"
+                                                   onafterpaste="if(this.value.length==1){this.value=this.value.replace(/[^1-9]/g,'')}else{this.value=this.value.replace(/\D/g,'')}">
+                                            <span class="input-group-addon"> ￥ </span>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                </div>
+                                <div class="row">
+                                    <div class="col-sm-5 col-sm-offset-1" style="margin-left:auto; margin-right:auto;">
+                                        <div class="form-group">
                                             <label>开始时间</label>
-                                            <input type="date" id="start-time" class="form-control" name="???" required="required">
+                                            <input type="date" id="form-begin_time" class="form-control" name="form-begin_time" required="required">
                                         </div>
                                     </div>
                                     <div class="col-sm-5 col-sm-offset-1" style="margin-left:auto; margin-right:auto;">
                                         <div class="form-group">
                                             <label>结束时间</label>
-                                            <input type="date" id="end-time" class="form-control time-input" name="???" required="required">
+                                            <input type="date" id="form-end_time" class="form-control time-input" name="form-end_time" required="required">
                                         </div>
                                     </div>
-                                    <div class="col-sm-5 col-sm-offset-1" style="margin-left:auto; margin-right:auto;">
-                                        <div class="form-group">
-                                            <label>价格/晚</label>
-                                            <div class="input-group">
-                                                <input type="number" class="form-control" name="???" required="required"
-                                                       onkeyup="if (this.value.length == 1) { this.value = this.value.replace(/[^1-9]/g, '') }else { this.value = this.value.replace(/\D/g, '') }"
-                                                       onafterpaste="if(this.value.length==1){this.value=this.value.replace(/[^1-9]/g,'')}else{this.value=this.value.replace(/\D/g,'')}">
-                                                <span class="input-group-addon"> ￥ </span>
-                                            </div>
-                                        </div>
-                                    </div>
+
+
                                     <div class="col-sm-8 col-sm-offset-2" style="margin-left:auto; margin-right:auto;">
                                         <div class="form-group">
                                             <button type="submit" class="form-control">发布</button>
@@ -67,13 +100,44 @@
                                     </div>
                                 </div>
                             </div>
-                            <!-- 创建活动实例 END -->
+                            <!-- 创建价格实例 END -->
                         </form>
 
                     </div>
                 </div>
                 <!-- wizard container -->
             </div>
+
+            <div class="col-sm-4">
+                <!-- wizard container -->
+                <div class="wizard-container">
+                    <div class="card wizard-card" id="wizard">
+
+                        <div class="wizard-header">
+                            <h3 class="wizard-title">已发布房源</h3>
+                            <hr />
+                            <p class="category">在已发布房源中选择一个，为其增加特殊价格</p>
+                        </div>
+                        @{
+                            if (ViewBag.homestayList != null)
+                            {
+                                for (int i = 0; i < ViewBag.homestayList.Length; i++)
+                                {
+                                    <label class="homestay" style="margin-left:auto; margin-right:auto;" productid="@ViewBag.homestayList[i].homestay_id" productname="@ViewBag.homestayList[i].homestay_name">
+                                        <b>@ViewBag.homestayList[i].homestay_name</b>
+                                    </label>
+                                }
+                            }
+                        }
+                        <!--
+                        <label class="activity" style="margin-left:auto; margin-right:auto;">
+                            <b>法式风情｜上海老城早午餐与隐秘探店</b>
+                        </label>-->
+                    </div>
+                </div>
+                <!-- wizard container -->
+            </div>
+
         </div>
         <!-- row -->
     </div>
@@ -86,15 +150,21 @@
     $(function () {
         var $newAct = $('#new-act');
         var $addInstance = $('#add-instance');
-        var $choosedActivity;
-        $newAct.show();
+        $newAct.hide();
         $addInstance.hide();
-
-        $('.activity').on('click', function () {
-
+        var $choosedHomestay;
+        $('.homestay').on('click', function () {
+            $('.homestay').removeClass('choosed');
             $newAct.hide();
             $addInstance.show();
             $(this).addClass('choosed');
+            var productID = $(this).attr('productid');
+            var productName = $(this).attr('productname');
+            $("#product_label").text("产品ID：" + productID);
+            $("#product_name").text("产品名称：" + productName);
+
+            $("#submitProduct").attr('value', productID);
+
             $choosedActivity = $(this);
             document.getElementById('add-instance').reset();
         });
@@ -114,11 +184,11 @@
         today += date.getMonth() + 1 < 10 ? "0" + (date.getMonth() + 1) : (date.getMonth() + 1);
         today += "-";
         today += date.getDate() < 10 ? "0" + date.getDate() : date.getDate();
-        $('#start-time').attr('min', today);
-        $('#end-time').attr('min', today);
+        $('#form-begin_time').attr('min', today);
+        $('#form-end_time').attr('min', today);
 
-        $('#start-time').change(function () {
-            $('#end-time').attr('min', $(this).val());
+        $('#form-begin_time').change(function () {
+            $('#form-end_time').attr('min', $(this).val());
         });
     });
 
