--- a/Adventure/Views/HomeStay/StayInfo.cshtml
+++ b/Adventure/Views/HomeStay/StayInfo.cshtml
@@ -198,6 +198,32 @@
                                 </p>
                             </div>
                         </article>
+                        <!---->>
+                        <article class="property-article property-contact-info">
+                            <header class="article-head">
+                                <h3 class="heading">参与者评价</h3>
+                            </header>
+                            <div class="article-body">
+                                <div class="media">
+                                    <div class="media-left">
+                                        <a href="agent-single-v1.html" class="media-object">
+                                            <img src="../images/headicon/default.jpg" style="border-radius:50%" class="agent-img img-rounded" alt="image"
+                                                 width="50" height="50">
+                                        </a>
+                                    </div>
+                                    <div class="media-body">
+                                        <div class="info-head">
+                                            <h4 class="media-heading"> @ViewBag.Landlord.first_name @ViewBag.Landlord.last_name</h4>
+                                            <p class="position " style="color:darkgray">2019-7-21 00:00:00</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <p>
+                                    民宿里的狗狗很可爱!!! 也很乖很听话,房间住的非常舒服,早餐味道不错!去迪士尼可以选择这家!真的不错!太喜欢那只哈士奇了 太可爱了啊啊啊啊!
+                                </p>
+                            </div>
+                        </article>
+
                         <article class="property-article property-contact-info">
                             <header class="article-head">
                                 <h3 class="heading">房东信息</h3>
