--- a/Adventure/Views/Activity/Index.cshtml
+++ b/Adventure/Views/Activity/Index.cshtml
@@ -6,100 +6,159 @@
 
 </script>
 
-<div class="hero-wrap js-fullheight" style="background-image: url(../../images/bg_1.jpg);">
+<div class="hero-wrap js-fullheight" style="background-image: url('../images/activity_bg.jpg');">
     <div class="overlay"></div>
     <div class="container">
-        <div class="row no-gutters slider-text js-fullheight align-items-center justify-content-center" data-scrollax-parent="true">
-            <div class="col-md-9 text-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
-                <p class="breadcrumbs" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">
-                    <span class="mr-2"> @Html.ActionLink("主页", "Index", "Home")</span>
-                    <span>活动</span>
-                </p>
-                <h1 class="mb-3 bread" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">体验活动</h1>
+        <div class="row no-gutters slider-text js-fullheight align-items-center justify-content-start" data-scrollax-parent="true">
+            <div class="col-md-9 ftco-animate mb-5 pb-5 text-center text-md-left" data-scrollax=" properties: { translateY: '70%' }">
+                <h1 class="mb-4" style="color:black" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">精选体验活动</h1>
+                <p  style="color:#f9be37" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }"><b>尝试一下新的当地居民创设的体验活动？万种风情等你来探索！</b></p>
             </div>
         </div>
     </div>
 </div>
 
-<section class="ftco-section  testimony-section" style="background-image: url(../images/Favor_bg.jpg);" data-stellar-background-ratio="0.5">
-    <div class="container">
-        <div class="row">
-            <!-- 搜索 -->
-            <div class="col-lg-3 sidebar order-md-last ftco-animate">
-                <div class="sidebar-wrap ftco-animate">
-                    <h3 class="heading mb-4">活动搜索</h3>
-                    <form action="#">
-                        <div class="fields">
-                            <div class="form-group">
-                                <input type="text" class="form-control" placeholder="Destination, City">
-                            </div>
-                            <div class="form-group">
-                                <div class="select-wrap one-third">
-                                    <div class="icon"><span class="ion-ios-arrow-down"></span></div>
-                                    <select name="" id="" class="form-control" placeholder="Keyword search">
-                                        <option value="">上海</option>
-                                        <option value="">北京</option>
-                                        <option value="">杭州</option>
-                                        <option value="">京都</option>
-                                        <option value="">洛杉矶</option>
-                                    </select>
+<section class="ftco-section justify-content-end ftco-search">
+    <div class="container-wrap ml-auto">
+        <div class="row no-gutters">
+            <div class="col-md-12 nav-link-wrap">
+                <div class="nav nav-pills justify-content-center text-center" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+                    <a class="nav-link" id="v-pills-1-tab" data-toggle="pill" href="#v-pills-1" role="tab" aria-controls="v-pills-1" aria-selected="true">民宿</a>
+
+                    <a class="nav-link active" id="v-pills-2-tab" data-toggle="pill" href="#v-pills-2" role="tab" aria-controls="v-pills-2" aria-selected="false">体验活动</a>
+
+                </div>
+            </div>
+            <div class="col-md-12 tab-wrap">
+
+                <div class="tab-content p-4 px-5" id="v-pills-tabContent">
+
+                    <div class="tab-pane fade " id="v-pills-1" role="tabpanel" aria-labelledby="v-pills-nextgen-tab">
+                        <form action="/HomeStay/Index" class="search-destination" method="post">
+                            <div class="row">
+                                <div class="col-md align-items-end">
+                                    <div class="form-group">
+                                        <label for="#">目的地</label>
+                                        <div class="form-field">
+                                            <div class="icon"><span class="icon-map-marker"></span></div>
+                                            <input type="text" name="destination" class="form-control" placeholder="您的目的地">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md align-items-end">
+                                    <div class="form-group">
+                                        <label for="#">入住时间</label>
+                                        <div class="form-field">
+                                            <div class="icon"><span class="icon-map-marker"></span></div>
+                                            <input type="text" name="start_time" class="form-control checkin_date" placeholder="您的入住时间">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md align-items-end">
+                                    <div class="form-group">
+                                        <label for="#">退房时间</label>
+                                        <div class="form-field">
+                                            <div class="icon"><span class="icon-map-marker"></span></div>
+                                            <input type="text" name="end_time" class="form-control checkout_date" placeholder="您的退房时间">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md align-items-end">
+                                    <div class="form-group">
+                                        <label for="#">入住人数</label>
+                                        <div class="form-field">
+                                            <div class="select-wrap">
+                                                <div class="icon"><span class="ion-ios-arrow-down"></span></div>
+                                                <select name="person_num" id="" class="form-control">
+                                                    <option value="1" selected>1</option>
+                                                    <option value="2">2</option>
+                                                    <option value="3">3</option>
+                                                    <option value="4">4</option>
+                                                    <option value="5">5</option>
+                                                </select>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md align-self-end">
+                                    <div class="form-group">
+                                        <div class="form-field">
+                                            <input type="submit" value="搜索" class="form-control btn btn-primary">
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
-                            <div class="form-group">
-                                <input type="text" id="checkin_date" class="form-control checkin_date" placeholder="Date from">
-                            </div>
-                            <div class="form-group">
-                                <input type="text" id="checkout_date" class="form-control checkout_date" placeholder="Date to">
-                            </div>
-                            <div class="form-group">
-                                <input type="submit" value="Search" class="btn btn-primary py-3 px-5">
-                            </div>
-                        </div>
-                    </form>
-                </div>
-                <!--
-        <div class="sidebar-wrap ftco-animate">
-            <h3 class="heading mb-4">星级</h3>
-            <form method="post" class="star-rating">
-                <div class="form-check">
-                    <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                    <label class="form-check-label" for="exampleCheck1">
-                        <p class="rate"><span><i class="icon-star"></i><i class="icon-star"></i><i class="icon-star"></i><i class="icon-star"></i><i class="icon-star"></i></span></p>
-                    </label>
-                </div>
-                <div class="form-check">
-                    <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                    <label class="form-check-label" for="exampleCheck1">
-                        <p class="rate"><span><i class="icon-star"></i><i class="icon-star"></i><i class="icon-star"></i><i class="icon-star"></i><i class="icon-star-o"></i></span></p>
-                    </label>
-                </div>
-                <div class="form-check">
-                    <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                    <label class="form-check-label" for="exampleCheck1">
-                        <p class="rate"><span><i class="icon-star"></i><i class="icon-star"></i><i class="icon-star"></i><i class="icon-star-o"></i><i class="icon-star-o"></i></span></p>
-                    </label>
-                </div>
-                <div class="form-check">
-                    <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                    <label class="form-check-label" for="exampleCheck1">
-                        <p class="rate"><span><i class="icon-star"></i><i class="icon-star"></i><i class="icon-star-o"></i><i class="icon-star-o"></i><i class="icon-star-o"></i></span></p>
-                    </label>
-                </div>
-                <div class="form-check">
-                    <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                    <label class="form-check-label" for="exampleCheck1">
-                        <p class="rate"><span><i class="icon-star"></i><i class="icon-star-o"></i><i class="icon-star-o"></i><i class="icon-star-o"></i><i class="icon-star-o"></i></span></p>
-                    </label>
-                </div>
-            </form>
-        </div>
-            -->
-            </div>
-            <!-- END -->
+                        </form>
+                    </div>
 
+                    <div class="tab-pane fade show active" id="v-pills-2" role="tabpanel" aria-labelledby="v-pills-performance-tab">
+                        <form action="/Activity/Index" class="search-destination" method="post">
+                            <div class="row">
+                                <div class="col-md align-items-end">
+                                    <div class="form-group">
+                                        <label for="#">目的地</label>
+                                        <div class="form-field">
+                                            <div class="icon"><span class="icon-map-marker"></span></div>
+                                            <input type="text" name="destination" class="form-control" placeholder="您的目的地">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md align-items-end">
+                                    <div class="form-group">
+                                        <label for="#">开始日期</label>
+                                        <div class="form-field">
+                                            <div class="icon"><span class="icon-map-marker"></span></div>
+                                            <input type="text" name="start_time" class="form-control checkin_date" placeholder="活动开始日期">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md align-items-end">
+                                    <div class="form-group">
+                                        <label for="#">结束日期</label>
+                                        <div class="form-field">
+                                            <div class="icon"><span class="icon-map-marker"></span></div>
+                                            <input type="text" name="end_time" class="form-control checkout_date" placeholder="活动结束日期">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md align-items-end">
+                                    <div class="form-group">
+                                        <label name="person_num" for="person_num">人数</label>
+                                        <div class="form-field">
+                                            <div class="select-wrap">
+                                                <div class="icon"><span class="ion-ios-arrow-down"></span></div>
+                                                <select name="person_num" id="person_num" class="form-control">
+                                                    <option value="1" selected>1</option>
+                                                    <option value="2">2</option>
+                                                    <option value="3">3</option>
+                                                    <option value="4">4</option>
+                                                    <option value="5">5</option>
+                                                </select>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md align-self-end">
+                                    <div class="form-group">
+                                        <div class="form-field">
+                                            <input type="submit" value="搜索" class="form-control btn btn-primary">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<section class="ftco-section  testimony-section" style="background-image: url(../images/Favor_bg.jpg);background-color:transparent" data-stellar-background-ratio="0.5">
+    <div class="container">
+        <div class="row">
             <div class="col-lg-9">
                 <div class="row">
-                    <div class="container ftco-section testimony-section">
+                    <div class="container ftco-section testimony-section" style="background-color:transparent">
                         <div class="row ftco-animate">
                             <div class="col-md-12">
                                 <div class="carousel-testimony owl-carousel ftco-owl">
@@ -121,15 +180,11 @@
                                                                         <h5 style="color:#FFFFFF">@ViewBag.returnList[i].activity_name</h5>
                                                                         <p class="rate">
                                                                             <i class="icon-star"></i>
-                                                                            <i class="icon-star"></i>
-                                                                            <i class="icon-star"></i>
-                                                                            <i class="icon-star"></i>
-                                                                            <i class="icon-star-o"></i>
-                                                                            <span>8 Rating</span>
+                                                                            <span>人数:@ViewBag.returnList[i].max_member_limit 人</span>
                                                                         </p>
                                                                     </div>
                                                                 </div>
-                                                                <div>上海</div>
+                                                                <div>@ViewBag.returnList[i].address</div>
                                                                 <hr />
                                                             </div>
                                                         </a>
